--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="icon" href="images/favicon.ico"/>
+    <link rel="icon" href="images/favicon.ico" />
     <div id="main">
       <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/p5.js"></script>
       <script
@@ -9,6 +9,7 @@
         src="sketch.js"
       ></script>
       <link rel="stylesheet" href="style.css" />
+      <button id="reset">Reset</button>
     </div>
   </head>
   <body></body>
