--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         src="sketch.js"
       ></script>
       <link rel="stylesheet" href="style.css" />
-      <button id="reset">Reset</button>
+      <button id="reset">Generate New Maze</button>
     </div>
   </head>
   <body></body>
