--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       ></script>
       <link rel="stylesheet" href="style.css" />
       <button id="reset">Generate New Maze</button>
+      <button id="start">PLAY/PAUSE</button>
+      <h1 id="condition">Generating Maze...</h1>
     </div>
   </head>
   <body></body>
