--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link rel="icon" href="images/favicon.ico" />
+    <title>Maze Generator</title>
     <div id="main">
       <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/p5.js"></script>
       <script
